# RustBiliDownloader

./: .gitignore  Cargo.toml  LICENSE  README.md  设计方案.md  调研报告.md
.cargo/: config.toml
.github/workflows/: ci.yml  release.yml
.sisyphus/drafts/: git-commit-plan.md
crates/rbd-auth/: Cargo.toml
crates/rbd-auth/src/: buvid.rs  cookie.rs  keyring_store.rs  lib.rs  profile.rs  refresh.rs  tv_qr.rs  web_qr.rs
crates/rbd-cli/: Cargo.toml
crates/rbd-cli/src/: args.rs  config.rs  i18n.rs  main.rs  progress.rs
crates/rbd-cli/src/commands/: batch.rs  download.rs  info.rs  login.rs  mod.rs
crates/rbd-core/: Cargo.toml
crates/rbd-core/src/: api.rs  bv.rs  extractor.rs  id.rs  lib.rs  model.rs  playurl.rs  proto.rs  wbi.rs
crates/rbd-core/tests/: integration_test.rs
crates/rbd-danmaku/: Cargo.toml
crates/rbd-danmaku/src/: color.rs  layout.rs  lib.rs  model.rs  options.rs  reader.rs  render.rs  writer.rs
crates/rbd-downloader/: Cargo.toml
crates/rbd-downloader/src/: aria2c.rs  event.rs  job.rs  lib.rs  manager.rs  parallel.rs  progress.rs  range.rs
crates/rbd-foundation/: Cargo.toml
crates/rbd-foundation/src/: codec.rs  config.rs  error.rs  lib.rs  locale.rs  log.rs  path.rs  progress.rs  ratelimit.rs  retry.rs  template.rs  version.rs
crates/rbd-muxer/: Cargo.toml
crates/rbd-muxer/src/: command.rs  dash_copy.rs  detector.rs  ffmpeg.rs  lib.rs  metadata.rs  strategy.rs
crates/rbd-playurl/: Cargo.toml
crates/rbd-playurl/src/: app_grpc.rs  client.rs  fallback.rs  html5.rs  lib.rs  tv.rs  web.rs  web_bangumi.rs
crates/rbd-subtitle/: Cargo.toml
crates/rbd-subtitle/src/: convert.rs  fallback.rs  fetch.rs  format.rs  lib.rs  model.rs
