[workspace]
resolver = "2"
members = [
    "crates/rbd-foundation",
    "crates/rbd-core",
    "crates/rbd-auth",
    "crates/rbd-playurl",
    "crates/rbd-danmaku",
    "crates/rbd-subtitle",
    "crates/rbd-downloader",
    "crates/rbd-muxer",
    "crates/rbd-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.88"
license = "MIT"
authors = ["RustBiliDownloader Contributors"]
repository = "https://github.com/rustbili/rustbili-downloader"
homepage = "https://github.com/rustbili/rustbili-downloader"
description = "纯 Rust B 站视频下载器 (A pure-Rust Bilibili video downloader)"
keywords = ["bilibili", "downloader", "video", "bvid", "bv"]
categories = ["command-line-utilities", "multimedia", "network-programming"]
readme = "README.md"

[workspace.dependencies]
# 异步运行时
tokio = { version = "1.41", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"
tokio-util = { version = "0.7", features = ["io", "rt"] }

# HTTP / 网络 (rust 1.83 兼容)
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "gzip", "brotli", "http2", "cookies"] }
hyper = { version = "1.5", features = ["full"] }
hyper-util = "0.1"
http = "1.1"
http-body-util = "0.1"
url = "2.4"
urlencoding = "2.1"
percent-encoding = "2.3"

# gRPC + Protobuf (APP 端备用, rbd-playurl::app_grpc)
tonic = { version = "0.12", features = ["gzip", "transport"] }
prost = "=0.13.4"
prost-types = "=0.13.4"
prost-build = "=0.13.4"

# 序列化
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
toml = "=0.8.19"
toml_edit = "=0.22.22"

# CLI (rust 1.83 兼容)
clap = { version = "=4.5.20", features = ["derive", "env", "color"] }
dialoguer = { version = "0.11", features = ["fuzzy-select"] }
indicatif = { version = "0.17", features = ["tokio"] }
console = "=0.15.10"

# 错误处理
anyhow = "1.0"

# 日志
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt", "ansi"] }
tracing-appender = "=0.2.3"

# 加密 / 哈希 (rust 1.83 兼容)
md-5 = "=0.10.6"
sha1 = "=0.10.6"
sha2 = "=0.10.8"
hmac = "=0.12.1"
aes-gcm = "=0.10.3"
aes = "=0.8.4"
cbc = "=0.1.2"
block-modes = "=0.9.0"
digest = "=0.10.7"
hex = "0.4"

# 限流 / 重试 (rust 1.83 兼容)
governor = "=0.6.3"
backoff = { version = "0.4", features = ["tokio"] }

# 编码 / 解析
quick-xml = { version = "0.36", features = ["serialize"] }
scraper = "=0.20.0"
regex = "=1.10.6"
once_cell = "1.20"
lazy_static = "1.5"

# 压缩
flate2 = "1.0"
brotli = "6.0"

# 文件 / 路径
tempfile = "3.13"
tokio-fs-stream = "0.2"
bytes = "1.7"
memmap2 = "0.9"
dirs = "=5.0.1"

# 系统集成 (rust 1.83 兼容: 旧主版本)
keyring = "2.3"
qrcode = "=0.14.1"
image = { version = "0.24", default-features = false, features = ["png"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.10", features = ["v4", "serde"] }

# 并行
rayon = "1.10"
rustc-hash = "2.0"

# 模板 (rust 1.83 兼容: 1.19 是最后兼容版本)
tera = { version = "1.19", default-features = false }

# ffmpeg 包装 (rbd-muxer 兜底)
tokio-process = "0.2"

# 测试
tokio-test = "0.4"
wiremock = "=0.6.2"
assert_matches = "1.5"
mockall = "0.13"
temp-env = "0.3"

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
must_use_candidate = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
cast_possible_truncation = "allow"
cast_precision_loss = "allow"
cast_sign_loss = "allow"
similar_names = "allow"

# ==================== 性能优化 ====================
[profile.release]
lto = "fat"
codegen-units = 1
opt-level = 3
strip = "symbols"
panic = "abort"
debug = false

[profile.release-debug]
inherits = "release"
debug = true
strip = "none"
