[package]
name = "rbd-core"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "RBD 核心协议: BilibiliId / WBI / BV<->AV / 8 个 Extractor / 5-mode playurl"
keywords.workspace = true
categories.workspace = true

[dependencies]
# 内部
rbd-foundation = { path = "../rbd-foundation" }

# 异步
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }

# HTTP
reqwest = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
percent-encoding = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 解析
quick-xml = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

# 加密 / 哈希
md-5 = { workspace = true }
sha1 = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
digest = { workspace = true }
hex = { workspace = true }

# gRPC + Protobuf (备选 APP 端, M4 启用)
tonic = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }

# 错误
anyhow = { workspace = true }

# 日志
tracing = { workspace = true }

# 工具
chrono = { workspace = true }
bytes = { workspace = true }
parking_lot = "0.12"

[build-dependencies]
tonic-build = { version = "0.12", features = ["prost"] }

[lints]
workspace = true
