[package]
name = "rbd-danmaku"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "RBD 弹幕: 自研 ASS 渲染 (rayon 并行) + 颜色/字号/透明度/速度可配"
keywords.workspace = true
categories.workspace = true

[dependencies]
# 内部
rbd-foundation = { path = "../rbd-foundation" }

# 异步
tokio = { workspace = true }
futures = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }

# 错误
thiserror = { workspace = true }
anyhow = { workspace = true }

# 日志
tracing = { workspace = true }

# 解析
quick-xml = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }

# 压缩
flate2 = { workspace = true }

# Protobuf
prost = { workspace = true }
prost-types = { workspace = true }

# 并行
rayon = { workspace = true }
rustc-hash = { workspace = true }

[build-dependencies]
prost-build = "0.13"

[lints]
workspace = true
