[package]
name = "rbd-foundation"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
description = "RBD 基础原语: 错误 / 日志 / 路径 / 进度 / 配置 / 限流"
keywords.workspace = true
categories.workspace = true

[dependencies]
# 错误处理
anyhow = { workspace = true }

# 日志
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }

# 异步
tokio = { workspace = true, features = ["fs"] }
async-trait = { workspace = true }
futures = { workspace = true }

# 序列化
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
toml_edit = { workspace = true }

# 路径 / 文件
tempfile = { workspace = true }
dirs = { workspace = true }

# 进度
indicatif = { workspace = true }
console = { workspace = true }

# 限流 / 重试
governor = { workspace = true }
backoff = { workspace = true }

# 编码
percent-encoding = { workspace = true }
url = { workspace = true }
urlencoding = { workspace = true }
md-5 = { workspace = true }
sha1 = { workspace = true }

# 时间 / UUID
chrono = { workspace = true }
uuid = { workspace = true }

# 模板
tera = { workspace = true }

# 系统
once_cell = { workspace = true }

[lints]
workspace = true
